<resources>
    <string name="app_name">YourContacts</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txtName1">John Smith</string>
    <string name="txtName2">Jane Doe</string>
    <string name="imgPicJohn">Picture John</string>
    <string name="imgPicJane">Picture Jane</string>
    <string name="txtAddressJohn">7856 Smith Ave, Pikesville, MD 21208</string>
    <string name="txtAddressJane">6432 Doe Street, Baltimore, MD 21209</string>
    <string name="txtPhoneJohn">443-556-3435</string>
    <string name="txtPhoneJane">202-545-4444</string>
    <string name="btnInformation">View Information</string>
    <string name="btnInformation2">View Information</string>
    <string name="btnBack">Back Button</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_contacts2">Contacts2</string>
</resources>
