<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.yourcontacts.Contacts2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtName2"
        android:id="@+id/txtName2"
        android:layout_marginTop="205dp"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAddressJane"
        android:id="@+id/txtAddressJane"
        android:layout_below="@+id/txtName2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:textSize="35sp"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPhoneJane"
        android:id="@+id/txtPhoneJane"
        android:layout_below="@+id/txtAddressJane"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:textSize="35sp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imgPicJane"
        android:src="@drawable/jane"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/imgPicJane" />
</RelativeLayout>
