<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.yourcontacts.Contacts">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtName1"
        android:id="@+id/txtName1"
        android:layout_marginTop="205dp"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/txtPhoneJohn"
        android:layout_alignStart="@+id/txtPhoneJohn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAddressJohn"
        android:id="@+id/txtAddressJohn"
        android:layout_below="@+id/txtName1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:textSize="35sp"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPhoneJohn"
        android:id="@+id/txtPhoneJohn"
        android:layout_below="@+id/txtAddressJohn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:textSize="35sp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imgPicJohn"
        android:layout_marginTop="35dp"
        android:src="@drawable/john"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
